fixed dreamstar mini hovers that were not showing correctly on hover

--- a/app/sass/home/_dreamstars_mini.sass
+++ b/app/sass/home/_dreamstars_mini.sass
@@ -41,7 +41,8 @@
     &:hover
       border: 4px solid #fff
       color: #fff
-      +transparent-dark(10)
+      background: rgba(0,0,0,0.1)
+      // +transparent-dark(10)
 
       .badge, .rank, .name
         color: #fff !important
